--- a/blog.html/blog.css
+++ b/blog.html/blog.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: url(/resources/Banner\ Image.png);
+    background-image: url("resources/Banner\ Image.png");
     color: white;
         height: 700px;
         background-repeat: no-repeat;
@@ -31,7 +31,7 @@
     height: 600px;
     /* padding: 20px; */
     color: white;
-    background-image: url(/resources/Vectorrr.png);
+    background-image: url("resources/Vectorrr.png");
     background-repeat: no-repeat;
     background-position: center;
     justify-content: space-between;
@@ -64,7 +64,7 @@
     text-align: center;
     margin-top: 50px;
     padding: 30px;
-    background: linear-gradient(rgba(247, 101, 101, 0.7), rgba(248, 248, 248, 0.7)), url("/resources/Rectangle 2.png");
+    background: linear-gradient(rgba(247, 101, 101, 0.7), rgba(248, 248, 248, 0.7)), url("resources/Rectangle 2.png");
    
     background-position: center;
     width: 1260px;
@@ -96,7 +96,7 @@
     margin-top: 50px;
 }
 .box{
-    background-image: url(/resources/Rectangle\ 2.png),url(/resources/Rectangle\ 1.png);
+    background-image: url("resources/Rectangle\ 2.png"),url("resources/Rectangle\ 1.png");
     background-repeat: no-repeat;
     background-position: bottom,top right;
     padding-left: 62px;
