--- a/blog.html/blog.css
+++ b/blog.html/blog.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: url("resources/Banner\ Image.png");
+    background-image: url("resources/Banner_Image");
     color: white;
         height: 700px;
         background-repeat: no-repeat;
